memoria texto enviado

--- a/doc/0_Portada.tex
+++ b/doc/0_Portada.tex
@@ -31,12 +31,12 @@
   \begin{table}[h]
     \begin{center}
       \begin{tabular}{ l c l }
-        PROFESOR GUÍA & : & MARÍA CRISTINA RIFF.\\
+        PROFESOR GUÍA & : & MARÍA CRISTINA RIFF\\
         PROFESOR CORREFERENTE & : & ELIZABETH MONTERO URETA\\
       \end{tabular}
     \end{center}
   \end{table}
 
   \vfill
-  \large JULIO 2016
+  \large Noviembre 2016
 \end{center}
