--- a/doc/1_Introduccion.tex
+++ b/doc/1_Introduccion.tex
@@ -3,25 +3,35 @@
 \chapter{Introducción}
 
 \section{Identificación del problema}
-El viento es uno de los fenómenos meteorológicos más comunes de las zonas costeras de Valparaíso. Su presencia incide en distintos aspectos del medio ambiente, como las condiciones del clima, la sensación térmica, algunos desastres naturales, entre otros. Esto atrae el interés de investigadores, lo que ha fomentado
-a lo largo de la historia el estudio de este fenómeno con el fin de poder controlar las variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este.\\ 
-Entre los diversos efectos del viento, uno de los más simples y útiles es su capacidad de mover objetos, lo cual ha permitido al hombre aprovechar esta propiedad para convertir la energía cinética del viento en energía eléctrica. Dicha fuente de energía es conocida como energía eólica, ampliamente calificada como renovable y poco contaminante.\\
-Acorde a esto último, en los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en el uso de las fuentes de energías renovables y con poco impacto ambiental, por lo que distintos proyectos en la materia han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía limpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
-Cualquiera sea el motivo de estudio de las características del viento (en particular el tema energético), existen dos variables fundamentales ha considerar: la velocidad y la dirección del viento. Ejemplo de ello es el estudio realizado sobre el potencial eléctrico en la provincia de Bushehr, Iran por Dabbaghiyan et al. \cite{Dabbaghiyan15}, o el trabajo de Chang en Taiwan \cite{Chang10_2}.\\ 
-En primera instancia, es necesario recopilar mediciones del viento de la zona a estudiar.
-Actualmente estos datos están disponibles y son obtenidos por diversos centros meteorológicos a lo largo del país. Para este proyecto, el servicio meteorológico de la Armada de Chile, que cuenta con el equipo necesario para registrar el comportamiento del viento a lo largo de las distintas épocas del año y en diferentes zonas de Chile, ha dispuesto de los registros del viento en la comuna de Valparaíso de los años 2013, 2014 y 2015.\\
-Con los datos a disposición, es necesario obtener modelos que expliquen la distribución de estas mediciones, de manera de poder obtener información relevante respecto al comportamiento del viento en función del estudio a realizar. \\ 
-En la literatura, son ampliamente aceptadas la distribución de \emph{Weibull} para modelar el conjunto datos de velocidad y la distribución de Von Mises para el modelo de la dirección del viento. Ambas distribuciones probabilistas requieren de la determinación de parámetros para que el modelo se ajuste a los datos obtenidos. La elección del método para poder encontrar los parámetros de ajustes definirá la calidad de los modelos, por ello, diversas fórmulas han sido presentadas en la literatura, las cuales tienen mayor o menor precisión dependiendo de las características de los datos, la calidad del método o la estrategia utilizada. Comúnmente, se utilizan métodos numéricos para la determinación de estos parámetros, sin embargo, estudios recientes han abordado nuevas estrategias
-utilizando métodos heurísticos, en particular la meta-heurística \emph{Particle Swarm Optimization} (en adelante también referido como PSO), con la cual se ha logrado mejorar la calidad del modelo para la velocidad del viento, como se expone en el caso de estudio en el noreste de Brasil por Carneiro et. al.  \cite{Carneiro15}, mientras que para la dirección del viento se ha propuesto una forma más sencilla para poder obtener los parámetros de ajuste a través del uso de PSO. La ventaja del uso de PSO es que es un algoritmo de uso general, de fácil implementación, buen tiempo de ejecución y con resultados cercanos al óptimo a encontrar.\\
-Por lo anterior, el trabajo a realizar en este proyecto se basa en validar el uso de PSO para encontrar los parámetros de ajuste de la distribución de Weibull con datos de la zona de la comuna de Valparaíso y abordar la estrategia propuesta por Heckenbergerova et al.\cite{Heckenbergerova15} para el ajuste del modelo de dirección del viento.
+El viento es uno de los fenómenos meteorológicos más comunes de las zonas costeras de Valparaíso. Su presencia incide en distintos aspectos del medio ambiente, como las condiciones del clima, la sensación térmica, la propagación de los pesticidas en plantaciones, algunos desastres naturales como los incendios, entre otros. Esto atrae el interés de investigadores dedicados a estudiar este fenómeno, con el fin de poder controlar las variables que condicionan su comportamiento, de manera de poder predecir los fenómenos subyacentes a este.\\ 
+Entre los diversos efectos del viento, se encuentra su capacidad de mover objetos, lo cual ha permitido al hombre aprovechar esta propiedad para convertir la energía cinética del viento en energía eléctrica. Dicha fuente de energía es conocida como energía eólica, ampliamente calificada como renovable y poco contaminante.\\
+Acorde a esto, en los últimos años, tanto el gobierno de Chile como la ciudadanía, han mostrado un creciente interés en el uso de las fuentes de energías renovables y con poco impacto ambiental, por lo que distintos proyectos en la materia han sido llevados a cabo, desde estudios de factibilidad y recopilación de datos hasta el emplazamiento de las primeras centrales de fuentes de energía limpia. El año 2014, el ministerio de energía publicó un extenso reporte acerca de la situación actual del país en materias de energías renovables, en donde se pueden ver distintas proyecciones y estimaciones de implementación de posibles plantas de generación a lo largo del país. \cite{minenergia14}\\
+%%pesticidas ????¿
+
+Cualquiera sea el motivo de estudio de las características del viento (en particular el tema energético), existen dos variables fundamentales a considerar: su velocidad y su dirección. Ejemplo de ello es el estudio realizado sobre el potencial eléctrico en la provincia de Bushehr, Irán por Dabbaghiyan et al. \cite{Dabbaghiyan15}, o el trabajo de Chang en Taiwan \cite{Chang10_2}.\\ 
+Generalmente, se requiere previo al análisis de estas dos características recopilar mediciones del viento de la zona a estudiar.
+Actualmente estos datos están disponibles y son obtenidos por diversos centros meteorológicos a lo largo del país. Para esta memoria los datos fueron proporcionados por el servicio meteorológico de la Armada de Chile, que cuenta con el equipo necesario para registrar el comportamiento del viento a lo largo de las distintas épocas del año y en diferentes zonas de Chile. Los datos con los que se trabajó son de la comuna de Valparaíso entre los años 2013, 2014 y 2015.\\
+El objetivo es proponer modelos basados en los datos históricos del viento con el fin de obtener la distribución de su velocidad y su dirección para, por ejemplo, poder evaluar el potencial eléctrico de cierta zona o prevenir la propagación de incendios. \\ 
+En la literatura, son ampliamente aceptadas la distribución de \emph{Weibull} para modelar el conjunto de datos de velocidad y la distribución de von Mises para el modelo de la dirección del viento. Ambas distribuciones probabilistas requieren de la determinación de parámetros para que el modelo se ajuste a los datos obtenidos. La elección del método para poder encontrar los parámetros de ajustes definirá la calidad de los modelos, por ello, diversas técnicas han sido presentadas en la literatura, las cuales tienen mayor o menor precisión, dependiendo de las características de los datos. Comúnmente, se utilizan métodos numéricos para la determinación de estos parámetros, sin embargo, estudios recientes han abordado nuevas estrategias
+utilizando métodos heurísticos, en particular la meta-heurística \emph{Particle Swarm Optimization} (en adelante también referido como PSO), con la cual se ha logrado mejorar la calidad del modelo para la velocidad del viento, como se expone en el caso de estudio en el noreste de Brasil por Carneiro et. al.  \cite{Carneiro15}. Por otra parte, para la dirección del viento también se ha propuesto obtener los parámetros de ajuste a través del uso de PSO, como se explica en Heckenbergerova et al.\cite{Heckenbergerova15}. La ventaja del uso de PSO es que es un algoritmo de uso general, de fácil implementación, cuyo tiempo de ejecución es mucho menor que los métodos numéricos tradicionales.\\
+Por lo anterior, el trabajo a realizar en esta memoria se centra en usar PSO para encontrar los parámetros de ajuste de la distribución de Weibull con datos de la zona de la comuna de Valparaíso y abordar la estrategia propuesta por Heckenbergerova et al.\cite{Heckenbergerova15} para el ajuste del modelo de dirección del viento.
 
 \section{Objetivos}
-Aplicar métodos actuales de optimización basados en la meta-heurística \emph{Particle Swarm Optimization} para el ajuste de modelos de dirección y velocidad del viento a los datos recopilados del viento en Valparaíso, con el fin de presentar resultados que permitan inferir información precisa acerca de las condiciones de la región para la generación de energía eólica y otras potenciales aplicaciones.
+Aplicar métodos actuales de optimización basados en la meta-heurística \emph{Particle Swarm Optimization} para el ajuste de modelos de dirección y velocidad del viento a los datos recopilados del viento en Valparaíso, con el fin de presentar resultados que permitan inferir información precisa acerca de las condiciones de la región para la generación de energía eólica, prevención de la propagación de incendios, entre otras potenciales aplicaciones.
 
 \subsection{Objetivos específicos}
 \begin{enumerate}
-    \item Implementar un algoritmo basado en \emph{Particle Optimization Sworm} para \textbf{encontrar} los parámetros de un modelo probabilístico que se ajusten a los datos de la velocidad del viento en Valparaíso. 
-    \item Implementar un algoritmo basado en \emph{Particle Optimization Sworm} para \textbf{optimizar} los parámetros de un modelo probabilístico que se ajusten a los datos de la dirección del viento en Valparaíso.
+    \item Implementar un algoritmo basado en \emph{Particle Swarm Optimization} para \textbf{encontrar} los parámetros de un modelo probabilístico que se ajusten a los datos de la velocidad del viento en Valparaíso. 
+    \item Implementar un algoritmo basado en \emph{Particle Swarm Optimization} para \textbf{optimizar} los parámetros de un modelo probabilístico que se ajusten a los datos de la dirección del viento en Valparaíso.
     \item Evaluar los modelos sobre los datos del viento para validar la propuesta realizada.
 \end{enumerate}
 
+\section{Estructura del documento}
+La estructura del documento tiene la siguiente forma:
+\begin{enumerate}
+  \item El \textbf{Capítulo 2} resume el trabajo actual encontrado en la literatura acerca de la meta-heurística \emph{Particle Swarm Optimization} y las técnicas existentes para hallar los parámetros de ajuste de las distribuciones de densidad de probabilidad de Weibull y la \emph{mixture of von Mises distribution}.
+  \item El \textbf{Capítulo 3} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de Weibull a los datos de velocidad el viento.
+  \item El \textbf{Capítulo 4} explica la implementación del PSO para el ajuste de la función de densidad de probabilidad de von Mises (\emph{mixture of von Mises distribution}) a los datos de dirección el viento.
+  \item El \textbf{Capítulo 5} expone alguna de las potenciales aplicaciones de los algoritmos propuestos para el ajuste de modelos en datos de velocidad y dirección del viento.
+  \item El \textbf{Capítulo 6} muestra las conclusiones generales obtenidas en esta memoria. 
+\end{enumerate}
