--- a/doc/2_Preeliminares.tex
+++ b/doc/2_Preeliminares.tex
@@ -1,8 +1,10 @@
 %!TEX root = main.tex
 
 \chapter{Estado del arte}
+En este capítulo se presenta una revisión de la literatura sobre la meta-heurística \emph{Particle Swarm Optimization}, con el fin de exponer el desarrollo actual de la técnica. Posteriormente, se revisarán los trabajos en donde se hayan utilizado las distribuciones de Weibull y von Mises para el acople de datos del viento, haciendo énfasis en aquellos que utilicen PSO para encontrar los parámetros de ajuste.
+
 \section{Particle Swarm Optimization}
-Como se introduce en el artículo de Kaveh \cite{Psoexplain14}, el algoritmo \emph{Particle Swarm Optimization} es una meta-heurística inspirada en las observaciones de la naturaleza acerca del comportamiento social de poblaciones de enjambres. Esta abstracción está basada en la interacción en grupo de seres vivos, por ejemplo, las gaviotas, las cuales suelen moverse en bandadas, vuelan en conjunto cerca del mar en búsqueda de zonas donde hayan alimento (peces), moviéndose individualmente, pero siendo influenciadas o guiadas por otras. El método simula la conducta de los individuos a través de partículas que se mueven dentro de un espacio (rango de posibles valores conocido como espacio de búsqueda), siendo estas afectadas por factores individuales (conocimiento propio del lugar donde estoy) y factores colectivos (conocimiento del enjambre del mejor lugar encontrado), los cuales dirigen el movimiento de estos grupos a zonas las cuales son escogidas o determinadas por una función objetivo (\emph{fitness function}).\\
+Como se introduce en el artículo de Kaveh \cite{Psoexplain14}, el algoritmo \emph{Particle Swarm Optimization} es una meta-heurística inspirada en las observaciones de la naturaleza acerca del comportamiento social de poblaciones de enjambres. Esta abstracción está basada en la interacción en grupo de seres vivos. Por ejemplo, las gaviotas suelen volar en conjuntos cerca del mar, en búsqueda de zonas donde hayan alimento (peces), moviéndose individualmente, pero a la vez, siendo influenciadas por el grupo social. El método simula la conducta de los individuos a través de partículas que se mueven dentro de un espacio (rango de posibles valores conocido como espacio de búsqueda), siendo estas afectadas por factores individuales (conocimiento propio del lugar donde se está) y factores colectivos (conocimiento del enjambre del mejor lugar encontrado por el grupo), los cuales dirigen el movimiento de estos a zonas las cuales son escogidas o determinadas por una función objetivo (\emph{fitness function}).\\
 Para cada partícula su vector posición  $\vec{x}$ representa una solución candidata, la cual varía dentro del espacio de búsqueda a velocidad $\vec{v}$. Después de varias iteraciones, el enjambre o conjunto de partículas se irá concentrando en aquellas zonas donde las posiciones obtengan mejores puntajes al ser evaluadas por la función objetivo.
 \\El modelo clásico presentado por Kennedy y Eberhart\cite{Kennedy95}, describe la variación de la velocidad y de la posición de las partículas como se presenta a continuación:
 \begin{align}
@@ -18,7 +20,7 @@ Como se explica en Kaveh \cite{Psoexplain14} $x_{i,j}^{k}$ y $v_{i,j}^{k}$ son l
     \caption*{Creado por Kaveh\cite{Psoexplain14}.}
     \label{fig:move_part}
 \end{figure}
-El modelo clásico presentado tiene ciertas deficiencias, en particular la forma en que se actualiza la velocidad no considera una ponderación para el aporte de la velocidad previa en una partícula. Para corregir esto, simplemente se añade un factor que escala la velocidad previa. Como se explica en Kaveh \cite{Psoexplain14}, este peso que se añade a la velocidad previa permite tener un control más apropiado respecto al comportamiento del enjambre. En términos extremos, si la velocidad previa se elimina (peso nulo), las partículas quedan atrapadas en una región local, pero si se le da demasiado peso, converge rápidamente a un óptimo local.\\
+El modelo clásico presentado tiene ciertas deficiencias, en particular la forma en que se actualiza la velocidad no considera una ponderación para el aporte de la velocidad previa en una partícula. Para corregir esto, simplemente se añade un factor que escala la velocidad previa. Como se explica en Kaveh \cite{Psoexplain14}, este peso que se añade a la velocidad previa permite tener un control más apropiado respecto al comportamiento del enjambre. En términos extremos, si la velocidad previa se elimina (peso nulo), las partículas quedan atrapadas en la región local de partida, pero si se le da demasiado peso, las partículas son reacias a converger a las buenas pocisiones conocidas.\\
 Es por esto que la forma del PSO actual tiene un parámetro $w$ que representa la incidencia de la velocidad previa en la velocidad actual de la partícula (parámetro llamado factor de inercia). Nuevamente, se tiene que la partícula actualiza su velocidad de la siguiente forma: 
 \begin{align}\label{eq:PSO}
     v_{i,j}^{k+1} &= wv_{i,j}^{k} + c_{1}r_{1}(xbest_{i,j}^k - x_{i,j}^k) + c_{2}r_{2}(xgbest_{j}^{k} - x_{i,j}^k)\\
@@ -95,7 +97,7 @@ Dado un conjunto de datos de velocidad obtenidos de la medición del viento, se 
  En la búsqueda de nuevas alternativas surge una propuesta para mejorar el ajuste de la función de distribución de probabilidad a los datos, a través del uso de la meta-heurística \emph{Particle Swarm Optimization}, propuesta que mejora la calidad de los resultados en comparación con los métodos numéricos presentados.  
  \subsection{Particle Swarm Optimization}
  En Carneiro et al. \cite{Carneiro15}, se realiza un caso de estudio de las características del viento en las zonas costeras de Parnaiba y Maracanaú, y en una zona interior, Petrolina, en Brasil. Allí se explica la necesidad de obtener un modelo para el comportamiento estocástico del viento, de manera de poder evaluar el potencial energético de aquellas regiones. Tal y como se adelanta anteriormente, el modelo utilizado para este propósito es la distribución de Weibull. Para poder utilizar dicha distribución, es necesario ajustar los parámetros del modelo a los datos recolectados.\\
- En el estudio mencionado, se propone un \emph{particle swarm optimization} para encontrar los parámetros $k$ y $c$ de la distribución de Weibull y a su vez corroborar que la calidad de la solución encontrada por el PSO, comparada con los métodos numéricos tradicionales, es de mejor calidad.\\
+ En el estudio mencionado, se propone un \emph{Particle Swarm Optimization} para encontrar los parámetros $k$ y $c$ de la distribución de Weibull y a su vez corroborar que la calidad de la solución encontrada por el PSO, comparada con los métodos numéricos tradicionales, es de mejor calidad.\\
  Así, se define la función de aptitud para el PSO como:
 \begin{align}\label{eq:PSO_FO}
     \epsilon(v_i) = \frac{1}{2}\sum_{i=0}^{n}(f_{real}(v_i) - f_{weibull}(v_i))^2
@@ -103,7 +105,7 @@ Dado un conjunto de datos de velocidad obtenidos de la medición del viento, se 
 Donde $\epsilon$, es el error cuadrático a minimizar entre los valores del histograma de los datos recolectados y la función de distribución de Weibull.\\
 El PSO utilizado es el modelo clásico presentado en la sección anterior, considerando los parámetros $w, c1$ y $c2$, sin embargo, para controlar la convergencia del método, se establece que estos parámetros varíen durante la ejecución del algoritmo dentro de un rango definido ($w \in \{0.4, 0.9\}, c1$ y $c2 \in \{0, 2.5\}$), aumentando los factores de inercia y cognitivo, y disminuyendo el factor social a medida que se avanza en las iteraciones. Esto se traduce en que se explotan las soluciones iniciales, para posteriormente en iteraciones finales el algoritmo explore en una vecindad local al óptimo encontrado hasta el momento.\\
 Finalmente, para evaluar los resultados de la propuesta, se compara el PSO con cinco de los seis métodos numéricos mencionados en la sección \ref{subsec:Numeric_Methods} utilizados para la estimación de los parámetros de Weibull: \emph{Moment Method} (M), \emph{Energy Method} (E), \emph{Energy Pattern Factor Method} (EPF), \emph{Energy Equivalent Method} (EE) y \emph{Maximum Likelihood} (ML). Además, para medir la calidad de cada método, se utilizan tres \emph{test} estadísticos: \emph{correlation} (r), \emph{relative bias} (RB) y \emph{root mean square error} (RMSE).\\
-Los resultados que se exponen en el trabajo citado demuestran que mediante la meta-heurística \emph{particle swarm optimization} se pueden obtener los mejores parámetros de ajuste para la distribución de Weibull. Un ejemplo de esto es expuesto en la figura \ref{fig:pso_fit}.
+Los resultados que se exponen en el trabajo citado demuestran que mediante la meta-heurística \emph{Particle Swarm Optimization} se pueden obtener los mejores parámetros de ajuste para la distribución de Weibull. Un ejemplo de esto es expuesto en la figura \ref{fig:pso_fit}.
 \begin{figure}[h!]
     \centering    
     \includegraphics[height=50mm]{figures/pso_fit.png} 
@@ -136,7 +138,7 @@ Por último, los resultados de este trabajo muestran que FVMF provee un razonabl
     \label{fig:wind_dir_vonMises}
 \end{figure}
 
-En el trabajo de Heckenbergerova et al.\cite{Heckenbergerova15}, se utiliza una estrategia diferente a la anteriormente mencionada, basados en la ya mencionada meta-heurística inspirada en la biología, \emph{Particle Swarm Optimization}. Proponen una forma distinta para encontrar un modelo de ajuste, utilizando la distribución estadística \emph{finite mixture of circular normal von Mises} (MvM), o simplemente \emph{mixture of von Mises distribution}, similar a la mencionada previamente.\\ 
+En el trabajo de Heckenbergerova et al.\cite{Heckenbergerova15}, se utiliza una estrategia diferente a la anteriormente mencionada, basados en la ya mencionada meta-heurística inspirada en la naturaleza, \emph{Particle Swarm Optimization}. Proponen una forma distinta para encontrar un modelo de ajuste, utilizando la distribución estadística \emph{finite mixture of circular normal von Mises} (MvM), o simplemente \emph{mixture of von Mises distribution}, similar a la mencionada previamente.\\ 
 En este caso, se define la \emph{simple von Mises distribution} (SvM) como:
 \begin{align}\label{eq:simpleVonMises}
     f(\theta; \mu, k) = \frac{1}{2{\pi}I_{0}(k)}e^{k cos(\theta - \mu)}
@@ -154,7 +156,7 @@ Donde $k$ es el número de funciones de la mezcla, $j$ es el índice de una part
  \begin{align}\label{eq:sol_pso}
     v = (\mu, k, w) = (\mu_1, ..., \mu_k,k_1,...,k_k,w_1,...,w_k)
 \end{align}
-Para lograr el objetivo, se obtiene en primer lugar una aproximación numérica de los parámetros del MvM a partir de los datos recolectados de la dirección del viento, estrategia nombrada como estimación analítica en el trabajo de Heckenbergerova et al. \cite{Heckenbergerova15}. Luego optimiza estos parámetros mediante el uso de la meta-heurística \emph{particle swarm optimization}, con parámetros fijos, en donde la solución está representada por una codificación del vector $\vec{v}$ mencionado anteriormente\ref{eq:sol_pso}.\\ 
+Para lograr el objetivo, se obtiene en primer lugar una aproximación numérica de los parámetros del MvM a partir de los datos recolectados de la dirección del viento, estrategia nombrada como estimación analítica en el trabajo de Heckenbergerova et al. \cite{Heckenbergerova15}. Luego optimiza estos parámetros mediante el uso de la meta-heurística \emph{Particle Swarm Optimization}, con parámetros fijos, en donde la solución está representada por una codificación del vector $\vec{v}$ mencionado anteriormente\ref{eq:sol_pso}.\\ 
 Como test estadístico, es utilizado el \emph{Pearson's chi-squared goodness-off-fit}. Los resultados muestran la mejora que se logra a la estimación inicial, comparando estos resultados con otra propuesta similar la cual se expone en un trabajo previo de los mismos autores \cite{Heckenbergerova13}, en donde se utiliza la misma estrategia pero reemplazando el PSO con algoritmos genéticos. Sin embargo, estos resultados no consiguen pasar el test estadístico impuesto por ellos mismos, por lo que existe trabajo futuro  a realizar para mejorar la propuesta y lograr la precisión deseada.\\
 Los resultados obtenidos para los datos recolectados en el aeropuerto de St John localizado en Newfoundland, Canadá, son apreciables en la figura \ref{fig:dir_pso}.
 \begin{figure}[h!]
@@ -167,5 +169,9 @@ Los resultados obtenidos para los datos recolectados en el aeropuerto de St John
 \end{figure}
 
 %%TODO explicar trabajo de los españoles...
-Otro trabajo interesante de revisar es el caso de estudio realizado por Carta et al. \cite{Carta07}, en donde se utiliza la \emph{finite mixture of von Mises distribution} para representar la velocidad direccional de viento. El ajuste es realizado mediante el método de mínimos cuadrados, y resuelto con el algoritmo Levenberg-Marquardt \cite{Gavin16} el cual requiere de un punto de partida o solución inicial. Para ello, utilizan el mismo método que se propone en el trabajo de \cite{Heckenbergerova13} el cual se utiliza en este trabajo y que es explicado en la siguiente sección \ref{ss:model_math_dir}. La calidad de la solución es medida a través del test $R^2$, y dentro de las conclusiones que se obtienen, es que más de 6 mezclas\emph{mixtures} de von Mises no incrementan considerablemente el valor de $R^2$\\
+Otro trabajo interesante de revisar es el caso de estudio realizado por Carta et al. \cite{Carta07}, en donde se utiliza la \emph{finite mixture of von Mises distribution} para representar la velocidad direccional de viento. El ajuste es realizado mediante el método de mínimos cuadrados, y resuelto con el algoritmo Levenberg-Marquardt \cite{Gavin16} el cual requiere de un punto de partida o solución inicial. Para ello, utilizan el mismo método que se propone en el trabajo de Heckenbergerova et al. \cite{Heckenbergerova13} el cual se utiliza en este trabajo y que es explicado en la siguiente sección \ref{ss:model_math_dir}. La calidad de la solución es medida a través del test $R^2$, y dentro de las conclusiones que se obtienen, es que más de 6 mezclas (\emph{mixtures}) de von Mises no incrementan considerablemente el valor de $R^2$\\
 El método es aplicado a datos recolectados desde dos estaciones del clima en el archipiélago de las islas Canarias. Una vez más, se confirma que la \emph{finite mixture of von Mises distribution} es aplicable a distintas regiones con una o más direcciones predominantes. 
+
+\section{Resumen del capítulo}
+Para modelar la velocidad y la dirección del viento, son comúnmente utilizadas las distribuciones de Weibull y von Mises respectivamente. Diversas técnicas han sido propuestas para ajustar los parámetros de las distribuciones de densidad de probabilidad, con el objetivo de representar lo mejor posible el conjunto de datos del viento. Normalmente se utilizan métodos numéricos, sin embargo, otras técnicas han sido exploradas con el fin de mejorar tiempos de ejecución y calidad de solución. Entre ellas, la meta-heurística \emph{Particle Swarm Optimization} ha demostrado conseguir buenos resultados, en diversos conjuntos de datos provenientes de distintas zonas del mundo.\\
+El modelo de la dirección el viento es un tema menos tratado que el de la velocidad. Por lo mismo, el ajuste realizado mediante el PSO aún presenta ciertas deficiencias, como las expuestas en las conclusiones de Heckenbergerova et al.\cite{Heckenbergerova15}, las cuales revelan que sus resultados no obtienen los valores esperados para el test propuesto.\\
