--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -112,3 +112,34 @@
     publisher={Department of Civil and Environmental Engineering, Duke University},
     year={2016}
 }
+@article{Shata05,
+    author={Shata, A.S Ahmed and Hanitsch Rolf},
+    title={Evaluation of wind energy potential and electricity generation on the coast of Mediterranean 
+    sea in Egypt},
+    publisher={Elsevier Ltd},
+    year={2005}
+}
+@article{Beer91,
+    author={Beer, Tom},
+    title={The interaction of wind and fire},
+    publisher={Kluwer Academic Publishers},
+    year={1991}
+}
+@article{Bedos01,
+    author={Bedos, Carole and Cellier, Pierre and Calvet, Raoul and Barriuso, Enrique and Gabrielle, Benoît},
+    title={Mass transfer of pesticides into the atmosphere by volatilization from soils and plants: overview},
+    publisher={INRA, EDP Sciences},
+    year={2001}
+}
+@article{Portugues12,
+    author={Portugués, E. García and Crujeiras, R. M. and Manteiga, W. González},
+    title={Exploring wind direction and dióxido de azufre concentration by circular-linear density estimation},
+    publisher={Springer-Verlag},
+    year={2012}
+}
+@article{KnotsMeterSeconds,
+    author={Mechtly, E. A.},
+    title={The International System of Units. Physical constants and conversion factors},
+    publisher={Scientific and Technical Information Office, NATIONAL AERONAUTICS AND SPACE ADMINISTRATION},
+    year={1973}
+}
